syntax = "proto3";

package auth;

option go_package = "auth.grpc";

service Auth {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login (LoginRequest) returns (LoginResponse) {}
    rpc IdentifyUser (IdentifyRequest) returns (IdentifyResponse) {}
}

message RegisterRequest {
    string login = 1;
    string password = 2;
}

message RegisterResponse {
    int64 user_id = 1;
}

message LoginRequest {
    string login = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message IdentifyRequest {
    string token = 1;
}

message IdentifyResponse {
    int64 user_id = 1;
}